Mon Oct 31 11:08:51 2016  Samuel Williams  <samuel.williams@oriontransfer.co.nz>

	* lib/uri/generic.rb (URI::Generic#merge): merge merge0.
	  [GH-1469]

Sun Oct 30 15:32:43 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems.rb, lib/rubygems/*, test/rubygems/*: Update
	  rubygems to 2.6.8.
	  Release note of 2.6.8: https://github.com/rubygems/rubygems/commit/9fb8880976f5ab998912898b091d88aa10eb1d4a

Sun Oct 30 06:39:37 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/windows_1254.c: Fix typo. Reported by k-takata at
	  https://github.com/k-takata/Onigmo/commit/ceb59cc. Thanks!

Sat Oct 29 19:59:37 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (cond0): !-operator is a method call, no warning for
	  literal in condition.  [ruby-core:77801] [Bug #12881]

Sat Oct 29 10:09:38 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): turn flip-flop in a not-operator
	  into a boolean value.  fix up r56315

Sat Oct 29 09:39:14 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (vm_call0_body): follow the original class, not to
	  loop the prepended module.  [ruby-core:77784] [Bug #12876]

Sat Oct 29 00:14:30 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/trans/windows-1255-tbl.rb: update mapping from 0xCA to
	  U+05BA.  [Feature #12877]

Fri Oct 28 23:22:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/depend: extract transcode_tblgen method calls for libraries
	  loaded by dynamically generated names, in single_byte.trans.

Fri Oct 28 16:05:03 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def (opt_case_dispatch): extract float value only if the
	  Float method is not redefined.

Fri Oct 28 15:58:16 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (RB_OBJ_BUILTIN_TYPE): special-const safe
	  BUILTIN_TYPE.

Fri Oct 28 15:20:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (id_finite_p, id_infinite_p, id_rationalize, id_PI):
	  initialize static IDs.
